intermediate deduper fixes